deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: manifest-deployment
  
spec:
  replicas: 3
  selector:
    matchLabels:
      app: manifest-deployment
  template:
    metadata:
      labels:
        app: manifest-deployment
    spec:
      containers:
      - name: manifest-deployment
        image: flask
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
          protocol: TCP
