ingress.yaml
apiVersion: netwowrking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redircet: "false"

spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: flask-service
                port:
                  number: 5000
            path: /
            pathType: Prefix
